# makana

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  main.rs  recorder.rs
crates/backend/tests/: elm327_emulator.rs  logfile_replay.rs  ws_smoke.rs
crates/backend/web/: index.html
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: elm327.rs  lib.rs  logfile.rs  mock.rs
firmware/: README.md
