[workspace]
resolver = "3"
members = ["crates/common", "crates/transport", "crates/backend"]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT"

[workspace.dependencies]
# Local crates
makana-common = { path = "crates/common" }
makana-transport = { path = "crates/transport" }

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-serial = "5.4"
futures = "0.3"
async-trait = "0.1"

# HTTP / WS
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "2"

# Misc
bytes = "1.8"
pin-project-lite = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
