[package]
name = "makana-backend"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "makana_backend"
path = "src/lib.rs"

[[bin]]
name = "makana-backend"
path = "src/main.rs"

[dependencies]
makana-common = { workspace = true }
makana-transport = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }


[dev-dependencies]
tokio-tungstenite = "0.29"
futures = { workspace = true }
tempfile = "3.14"